--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="feed.css">
   <title>Hello, World!</title>
   
- <script src="js/script.js"></script> 
+ <script src="script.js"></script> 
 <style>
 li{
 display: none;
@@ -52,6 +52,6 @@ display: none;
   <script>
   document.getElementById("texto").innerHTML="Desenvolva sua fé.";
   </script>
- <script src="js/script.js"></script>
+ <script src="script.js"></script>
 </body>
 </html>
