--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ display: none;
     <div class="space"></div>
     <h1>Desenvolva sua fé</h1>
   
-    <div style="text-align: center;" class="filmes">
+    <div style="padding: 10px;text-align: center;" class="filmes">
 <iframe width="420" height="315"src="https://www.youtube.com/embed/7vi-MzYiCus?si=R74qZd-xRgxp_5-5"></iframe>
     <iframe width="420" height="315" src="https://www.youtube.com/embed/13GFV_rv9nE?si=1F-VJXr_KohtoZz8"></iframe>
       <iframe width="420" height="315" src="https://www.youtube.com/embed/playlist?list=PL9bc6AYFN6VJ_xmjyULDnsuPfF48UB9ul&si=8i5gYn4VoVXplLwT"></iframe>
