--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ display: none;
     <h1>Desenvolva sua fé</h1>
   
     <div style="padding: 10px;text-align: center;" class="filmes">
-<iframe width="420" height="315"src="https://www.youtube.com/embed/7vi-MzYiCus?si=R74qZd-xRgxp_5-5"></iframe>
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/13GFV_rv9nE?si=1F-VJXr_KohtoZz8"></iframe>
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/playlist?list=PL9bc6AYFN6VJ_xmjyULDnsuPfF48UB9ul&si=8i5gYn4VoVXplLwT"></iframe>
-      <iframe width="420" height="315" src="https://www.youtube.co/embed/BeZ6DBsoFU4?si=h6ODcP58-06t7OO8"></iframe>
+<iframe width="100%" height="315"src="https://www.youtube.com/embed/7vi-MzYiCus?si=R74qZd-xRgxp_5-5"></iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/13GFV_rv9nE?si=1F-VJXr_KohtoZz8"></iframe>
+      <iframe width="100%" height="315" src="https://www.youtube.com/embed/playlist?list=PL9bc6AYFN6VJ_xmjyULDnsuPfF48UB9ul&si=8i5gYn4VoVXplLwT"></iframe>
+      <iframe width="100%" height="315" src="https://www.youtube.co/embed/BeZ6DBsoFU4?si=h6ODcP58-06t7OO8"></iframe>
   </div>
   <script>
   document.getElementById("texto").innerHTML="Desenvolva sua fé.";
