--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ display: none;
             <label for="menu"></label>
             <div class="menu-content">
                 <ul class="menu">
-<img height="200" width: 350; src="img/logo1.jpg">
+<img height="200" width: 350; src="logo1.jpg">
                     
                     <a href="sobre.html"><li>Sobre</li></a>
                   <a href="ajuda.html"><li>Ajuda</li></a>
